Fix contrast issue (blue hyperlink over black background) (#210)

--- a/less/documentDB.less
+++ b/less/documentDB.less
@@ -1522,6 +1522,10 @@ p {
     .tooltipVisible();
 }
 
+.infoTooltip a {
+    color: @AccentHigh;
+}
+
 .nowrap {
     white-space: nowrap;
 }
@@ -3013,4 +3017,4 @@ settings-pane {
 
 .infoBoxContent a {
     color: @AccentMediumHigh
-} 
+}
